<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">photoMobApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="yes">yes</string>
    <string name="remove">Delete</string>
    <string name="edit">Edit</string>
    <string name="addAlbumForSingle">Add Album</string>
     <string name="back">Back</string>
     <string name="backAlbum">Back</string>
     <string name="deleteP">Delete Photo</string>
     <string name="ConfirmDeleteSingle">Confirm</string>
     <string name="CancelDeleteSingle">Cancel</string>
     <string name="MovePhotoa">Move Photo</string>
     <string name="ConfirmMoveSingle">Move to where?</string>
     <string name="CancelMoveSingle">Cancel</string>
</resources>
